syntax = "proto3";

package oauser;

option go_package = "./oauser";

// 服务架构:
// 用户 -> 前端 -> nginx网关 -> oauser-api -> oauser.rpc -> redis 缓存用户信息 -> 数据库 oauser (MySQL)
//                                                      -> other.rpc -> redis 缓存用户信息 -> 数据库 other (MySQL)

// consul 注册地址:consul.huinong.internal
// rpc 端口:20002
// rpc 服务名:oauser.rpc

// 数据库:oauser (MySQL)
// 缓存:redis 缓存用户信息

// 服务职责:
// 1. 用户信息管理:用户信息查询、用户信息修改、用户注销
// 2. 用户认证管理:用户登录管理、用户注册管理、用户注销管理、用户密码修改

// -- ----------------------------
// 后台用户表
// -- ----------------------------
// DROP TABLE IF EXISTS `oa_users`;
// CREATE TABLE `oa_users` (
//   `id` bigint UNSIGNED NOT NULL AUTO_INCREMENT COMMENT '用户ID',
//   `phone` varchar(20) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NOT NULL COMMENT '手机号',
//   `password_hash` varchar(255) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci NOT NULL COMMENT '密码哈希',
//   `name` varchar(50) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci DEFAULT '' COMMENT '姓名',
//   `nickname` varchar(50) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci DEFAULT '' COMMENT '昵称',
//   `age` tinyint UNSIGNED DEFAULT 0 COMMENT '年龄',
//   `gender` tinyint UNSIGNED DEFAULT 0 COMMENT '性别 0:未知 1:男 2:女',
//   `role` varchar(255) CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci DEFAULT '' COMMENT '管理员(admin)/普通操作员(operator)',
//   `status` tinyint UNSIGNED DEFAULT 1 COMMENT '状态 1:正常 2:禁用',
//   `created_at` timestamp NULL DEFAULT CURRENT_TIMESTAMP COMMENT '创建时间',
//   `updated_at` timestamp NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '更新时间',
//   PRIMARY KEY (`id`),
//   UNIQUE KEY `uk_phone` (`phone`)
// ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci COMMENT='后台用户表';


// 后台用户基础信息
message UserInfo {
    int64 id = 1;  // 用户ID
    string phone = 2; // 手机号
    string name = 3;  // 姓名
    string nickname = 4;  // 昵称
    int32 age = 5;  // 年龄
    int32 gender = 6;  // 0:未知 1:男 2:女
    string role = 7;  // 管理员(admin)/普通操作员(operator)
    int32 status = 8;  // 1:正常 2:禁用
    int64 created_at = 9;  // 创建时间
    int64 updated_at = 10;  // 更新时间
}

// OaUser服务 - 包含用户信息管理和认证管理
service OaUser {
    
    // 用户信息管理
    rpc GetUserByPhone(GetUserInfoReq) returns (GetUserInfoResp);
    rpc UpdateUserInfo(UpdateUserInfoReq) returns (UpdateUserInfoResp);
    rpc UpdateUserStatus(UpdateUserStatusReq) returns (UpdateUserStatusResp);
    rpc DeleteUser(DeleteUserReq) returns (DeleteUserResp);
    
    // 用户认证管理
    rpc Login(LoginReq) returns (LoginResp);
    rpc Register(RegisterReq) returns (RegisterResp);
    rpc Logout(LogoutReq) returns (LogoutResp);
    rpc ChangePassword(ChangePasswordReq) returns (ChangePasswordResp);
}


// 获取用户信息
message GetUserInfoReq {
    string phone = 1;
}

message GetUserInfoResp {
    UserInfo user_info = 1;
}
// 获取用户信息


// 更新用户信息
message UpdateUserInfoReq {
    UserInfo user_info = 1;
}

message UpdateUserInfoResp {
    UserInfo user_info = 1;
}

// 更新用户状态
message UpdateUserStatusReq {
    string phone = 1;
    int32 status = 2;
}

message UpdateUserStatusResp {
    int32 status = 1;
}
// 更新用户信息



// 删除用户
message DeleteUserReq {
    string phone = 1;
    string caller_token = 2;  // 调用者的JWT Token，用于权限验证
}

message DeleteUserResp {
}
// 删除用户


//登录
message LoginReq {
    string phone = 1;
    string password = 2;
}

message LoginResp {
    string token = 1; // 返回纯JWT token，Postman可配置为Bearer Token自动添加前缀
}
// 登录


// 注册
message RegisterReq {
    string phone = 1;
    string password = 2;
    string role = 3;
}

message RegisterResp {
    string token = 1; // 返回纯JWT token，Postman可配置为Bearer Token自动添加前缀
}
// 注册


// 注销 (从JWT上下文获取用户信息)
message LogoutReq {
    string token = 1; // 从 JWT 认证上下文中获取用户信息
}

message LogoutResp {}
// 注销


// 修改密码
message ChangePasswordReq {
    string phone = 1;
    string old_password = 2;
    string new_password = 3;
}

message ChangePasswordResp {
}
// 修改密码